DEV-309: Refactored code to use Paths of files, both profiles set working directory of R executing.